# optics-monorepo

./: .gitattributes  .gitignore  Crypto  README.md  config.json  contract-inheritance.md  pre-commit.sh  test-all.sh  typechain-gen.sh  ~
.github/: CODEOWNERS
abis/: Home.abi.json  ProcessingReplica.abi.json  Replica.abi.json  XappConnectionManager.abi.json
docs/: FailureCases.md  architecture.md  contributing.md  faq.md
rust/: .gitignore  Cargo.toml  Dockerfile  README.md  rust-toolchain.toml
rust/optics-base/: Cargo.toml
rust/optics-base/config/: default.json  default.toml
rust/optics-base/src/: agent.rs  contract_sync.rs  history.rs  history_sync.rs  home.rs  home_indexer.rs  indexer.rs  indexer_provider.rs  lib.rs  macros.rs  main.rs  metrics.rs  prover.rs  replica.rs  sample_main.rs  syncing_home_db.rs  utils.rs  xapp.rs
rust/optics-base/src/abis/: Home.abi.json  ProcessingReplica.abi.json  mod.rs
rust/optics-base/src/db/: persistence.rs
rust/optics-base/src/mocks/: home.rs  mod.rs
rust/optics-base/src/settings/: chains.rs  ethereum.rs  log.rs  mod.rs
rust/optics-base/src/settings/trace/: fmt.rs  jaeger.rs  mod.rs  zipkin.rs
scripts/: resolve-typechain-conflicts.sh  test-all.sh  test-solditity.sh
solidity/: .prettierrc  hardhat.config.js  package-lock.json  package.json  update_abis.sh
typescript/: bridge.ts  hardhat.config.ts  package-lock.json  package.json
vectors/: destinationSequenceTestCases.json  domainHashTestCases.json  message.json  messageTestCases.json  proof.json  proveAndProcessTestCases.json  signatureDomainTestCases.json  (+2 more)
(+612 files in other folders)
