[package]
name = "optics-base"
version = "0.1.0"
authors = ["James Prestwich <prestwich@clabs.co>"]
edition = "2018"


[dependencies]
# Main block
tokio = { version = "1.0.1", features = ["rt", "macros"] }
config = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false }
ethers = { git = "https://github.com/gakonst/ethers-rs", branch = "master" }
thiserror = { version = "1.0.22", default-features = false }
async-trait = { version = "0.1.42", default-features = false }
futures-util = "0.3.12"
color-eyre = "0.5.0"
tracing = "0.1.22"
tracing-futures = "0.2.4"
tracing-subscriber = "0.2.15"
rocksdb = { git = "https://github.com/rust-rocksdb/rust-rocksdb" }
rand = "0.8"

optics-core = { path = "../optics-core" }
optics-ethereum = { path = "../chains/optics-ethereum"}
optics-test = { path = "../optics-test" }
paste = "1.0.5"
tracing-error = "0.1.2"

tracing-opentelemetry = "0.15.0"
opentelemetry = { version = "0.16.0", features = ["rt-tokio", "trace"] }
opentelemetry-otlp = { version = "0.9", features = ["tokio", "tonic"] }

# these versions are important!
rusoto_core = "0.47.0"
rusoto_kms = "0.47.0"
lazy_static = "1.4.0"
once_cell = "1.8.0"

[[example]]
name = "example"
path = "./bin/example.rs"
